deployment-pesbuk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk-deployment
  namespace: production
  labels:
    app: pesbuk-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pesbuk-deployment
  template:
    metadata:
      labels:
        app: pesbuk-deployment
    spec:
      volumes:
        - name: config-secret
          configMap:
            name: p-fb-configmap-secret
      containers:
      - name: pesbuk-deployment
        image: fiardika/pesbuk-jenkins:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-secret
          mountPath: "/var/www/html/config.php"
          subPath: "config.php"
---

kind: Service
apiVersion: v1
metadata:
  name: pesbuk-service
  namespace: production
spec:
  selector:
    app: pesbuk-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
spec:
  rules:
   - host: pesbuk.fiardika.xyz
    http:
      paths:
        - backend:
            serviceName: pesbuk-service
            servicePort: 80
